RESOLVED FIXED298044
REGRESSION(299205@main): [ macOS wk2 arm64 ] fast/scrolling/mac/scrollbars/overflow-in-iframe-overlay-scrollbar-reveal.html is a flaky text failure
https://bugs.webkit.org/show_bug.cgi?id=298044
Summary REGRESSION(299205@main): [ macOS wk2 arm64 ] fast/scrolling/mac/scrollbars/ov...
Bryan Medina
Reported 2025-08-28 11:14:05 PDT
fast/scrolling/mac/scrollbars/overflow-in-iframe-overlay-scrollbar-reveal.html is a flaky text failure occurring on macOS wk2 arm64. HISTORY: https://results.webkit.org/?suite=layout-tests&test=fast%2Fscrolling%2Fmac%2Fscrollbars%2Foverflow-in-iframe-overlay-scrollbar-reveal.html TEXT DIFF: --- /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/fast/scrolling/mac/scrollbars/overflow-in-iframe-overlay-scrollbar-reveal-expected.txt +++ /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/fast/scrolling/mac/scrollbars/overflow-in-iframe-overlay-scrollbar-reveal-actual.txt @@ -5,7 +5,7 @@ Initial state -enabled + MayBegin should show the scrollbar PASS Scrollbar state: enabled,visible_thumb Cancelled should hide the scrollbar TEXT DIFF URL: https://build.webkit.org/results/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/299252@main%20(4262)/fast/scrolling/mac/scrollbars/overflow-in-iframe-overlay-scrollbar-reveal-diff.txt
Attachments
[fast-cq]Patch (2.17 KB, patch)
2025-09-04 08:17 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2025-08-28 11:14:29 PDT
Bryan Medina
Comment 2 2025-08-28 11:15:35 PDT
I was able to reproduce the text failure locally on my device running macOS Sequoia Release ToT using the following command: run-webkit-tests fast/scrolling/mac/scrollbars/overflow-in-iframe-overlay-scrollbar-reveal.html --iterations=25 -f
EWS
Comment 3 2025-08-28 11:22:00 PDT
Test gardening commit 299267@main (14ef4397b43e): <https://commits.webkit.org/299267@main> Reviewed commits have been landed. Closing PR #50014 and removing active labels.
Bryan Medina
Comment 4 2025-08-28 11:55:17 PDT
By using the reproduction steps mentioned above, I was able to reproduce the first failure for this test at 299205@main and was not able to reproduce it at 299204@main. At this time I believe the regression point is at 299205@main.
alan
Comment 5 2025-09-04 08:17:06 PDT
Created attachment 476637 [details] [fast-cq]Patch
EWS
Comment 6 2025-09-04 13:53:39 PDT
Committed 299578@main (742a4e98da34): <https://commits.webkit.org/299578@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 476637 [details].
Note You need to log in before you can comment on or make changes to this bug.