REGRESSION(299205@main): [ macOS wk2 arm64 ] fast/scrolling/mac/scrollbars/overflow-in-iframe-overlay-scrollbar-reveal.html is a flaky text failure https://bugs.webkit.org/show_bug.cgi?id=298044 <rdar://problem/159376922>

Reviewed by Simon Fraser.

Trying to validate line layout when we already have UndeterminedPath state may cause missing content.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::invalidateLineLayout):

Canonical link: https://commits.webkit.org/299578@main